NSL-5703 moveUris deletes redundant records